Prevent axis highlight from overlapping normal axis labels by hiding the label when the highlight is closer than a specfiable threshold.
Add the property "highlightBoundary" (default 24) which hides the labels for ticks which are within a certain pixel distance - the boundary - from the highlight tick(s).

--- a/sszvis.css
+++ b/sszvis.css
@@ -19,9 +19,13 @@
 }
 
 /* States */
-.sszvis-axis .tick.active text {
+.sszvis-axis .tick text.active {
   fill: #545454;
   font-weight: bold;
+}
+
+.sszvis-axis .tick text.hidden {
+  display: none;
 }
 
 /* Modifiers */
